<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.krenai.vendor.Activity.Authentication.Login">

    <RelativeLayout
        android:id="@+id/activity_Login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">
        <!-- LoginActivity progress -->
        <LinearLayout
            android:id="@+id/text_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="92dp"
                android:layout_gravity="left"
                android:layout_marginTop="52dp"
                android:src="@drawable/logo_wb" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="KRENAI ACCOUNT "
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="ENTER KRENAI CREDENTIALS CREATED FROM WEB PANEL"
                android:textColor="@android:color/white"
                android:textSize="9sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_holder"
            android:layout_gravity="center"
            android:layout_marginTop="62dp"
            android:orientation="vertical"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="6dp"
                android:background="@drawable/edit_text_line"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="top"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stringEditTextHeadingPhoneNumber"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/edit_text_heading_size"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/reg_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:background="@color/colorTransparent"
                        android:hint="@string/stringEditTextLoginPhoneNumber"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingTop="8dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="8dp"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/windowBackgroundDark"
                        android:textSize="@dimen/edit_text_hint_size" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="6dp"
                android:background="@drawable/edit_text_line"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="top"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/stringActivityForgotPasswordHeading"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/edit_text_heading_size"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/reg_safe_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:background="@color/colorTransparent"
                        android:hint="@string/stringEditTextLoginPassword"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingTop="8dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="8dp"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/windowBackgroundDark"
                        android:textSize="@dimen/edit_text_hint_size" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="32dp"
                android:layout_marginRight="6dp"
                android:background="@drawable/gradiant_circle"
                android:orientation="horizontal"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="26dp"
                    android:layout_weight="1"
                    android:gravity="top"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <Button
                        android:id="@+id/sign_in_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorTransparent"
                        android:text="Login"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="4.9"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/login_progress"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:background="@drawable/button_blue"
                        android:gravity="center"
                        android:padding="12dp"
                        android:visibility="gone">

                        <ProgressBar
                            style="?android:attr/progressBarStyleLarge"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/arrow"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:background="@drawable/button_blue"
                        android:padding="8dp"
                        android:rotation="180"
                        android:src="@drawable/ic_keyboard_backspace_black_24dp"
                        android:tint="@color/white"
                        android:translationZ="4dp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/forgot_password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="FORGOT PASSWORD"
                android:textColor="@color/white" />

        </LinearLayout>
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>